2009-02-23  Gian Mario Tagliaretti  <gianmt@gnome.org>
	
	Bug 567736 – Misleading suggestion of get_child_requisition in
	gtk.Widget.size_request documentation

	* pygtk-gtkwidget.xml: Apply a patch from Pietro Battiston

2009-02-22  Gian Mario Tagliaretti  <gianmt@gnome.org>
	
	* pygtk-gtkcontainer.xml:
	* pygtk-gtkcolorselectiondialog.xml:
	* pygtk-gtkclipboard.xml:
	* pygtk-gtkadjustment.xml:
	* pygtk-gtkaccelgroup.xml:
	* pygtk-gtkwidget.xml: Update docs to 2.14

2008-11-28  Gian Mario Tagliaretti  <gianmt@gnome.org>
	
	* pygtk-gtkstatusicon.xml:
	* pygtk-gtksettings.xml:
	* pygtk-gtkscalebutton.xml:
	* pygtk-gtkrange.xml:
	* pygtk-gtkprogressbar.xml: Update docs to 2.14

2008-11-23  Gian Mario Tagliaretti  <gianmt@gnome.org>
	
	* pygtk-gtkplug.xml: Update docs to 2.14
	
2008-11-20  Gian Mario Tagliaretti  <gianmt@gnome.org>
	
	* pygtk-gtklinkbutton.xml:
	* pygtk-gtkmenuitem.xml:
	* pygtk-gtkmenu.xml: Update docs to 2.14

2008-11-17  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 561210 – Change documentation of clicked event
	
	* pygtk-gtkbutton.xml: fix #561210.

2008-11-17  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 560509 – The documentation for gtk.ComboBox does not include the
	signals "popup", "popdown" and "move-active"
	
	* pygtk-gtkcombobox.xml: fix the above bug and update to 2.14 release.
	
	* pygtk-gtkcalendar.xml:
	* pygtk-gtkcellrenderercombo.xml:
	* pygtk-gtkcellrendererpixbuf.xml:
	* pygtk-gtkentry.xml: Update to 2.14 release.

2008-09-26  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 553921 – Incorrect callback signature of gtk.TextBuffers'
	"mark-set" signal

	* pygtk-gtktextbuffer.xml (mark-set): Fix signature documentation.

2008-09-22  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 541510 – pango.layout missing document on
	layout.get_font_description()

	* pygtk-pangolayout.xml: add pango.Layout.get_font_description()

2008-09-09  Paul Pogonyshev  <pogonyshev@gmx.net>

	* pygtk-gdk-functions.xml: Document new `gtk.gdk.lock'.
