@@ -95,6 +95,16 @@ linkend="method-gtkdialog--get-response-for-widget">get_response_for_widget</lin
 	<methodparam><parameter
 		       role="keyword">widget</parameter></methodparam>
       </methodsynopsis>
+      
+      <methodsynopsis language="python">
+	<methodname><link linkend="method-gtkdialog--get-action-area">get_action_area</link></methodname>
+	<methodparam></methodparam>
+      </methodsynopsis>
+      <methodsynopsis language="python">
+	<methodname><link linkend="method-gtkdialog--get-content-area">get_content_area</link></methodname>
+	<methodparam></methodparam>
+      </methodsynopsis>
+    
     </classsynopsis>
  
     <programlisting>
@@ -792,12 +802,63 @@ returns the response id of the widget specified by
 
     </refsect2>
 
+    <refsect2 id="method-gtkdialog--get-action-area">
+      <title>gtk.Dialog.get_action_area</title>
+
+      <programlisting><methodsynopsis language="python">
+	  <methodname>get_action_area</methodname>
+	  <methodparam></methodparam>
+	</methodsynopsis></programlisting>
+      <variablelist>
+	<varlistentry>
+          <term><emphasis>Returns</emphasis>&nbsp;:</term>
+          <listitem><simpara>the action area.</simpara></listitem>
+	</varlistentry>
+      </variablelist>
+
+      <note>
+        <para>This method is available in PyGTK 2.14 and above.</para>
+      </note>
+
+      <para>
+	The <methodname>get_action_area</methodname>() method
+	returns the action area of dialog.
+      </para>
+
+    </refsect2>
+
+    <refsect2 id="method-gtkdialog--get-content-area">
+      <title>gtk.Dialog.get_content_area</title>
+
+      <programlisting><methodsynopsis language="python">
+	  <methodname>get_content_area</methodname>
+	  <methodparam></methodparam>
+	</methodsynopsis></programlisting>
+      <variablelist>
+	<varlistentry>
+          <term><emphasis>Returns</emphasis>&nbsp;:</term>
+          <listitem><simpara>the content area
+	  <link linkend="class-gdkscreen"><classname>gtk.VBox</classname></link>.</simpara></listitem>
+	</varlistentry>
+      </variablelist>
+
+      <note>
+        <para>This method is available in PyGTK 2.14 and above.</para>
+      </note>
+
+      <para>
+	The <methodname>get_content_area</methodname>() method
+	returns the content area of dialog.
+      </para>
+
+    </refsect2>
+
   </refsect1>
 
   <refsect1>
     <title>Functions</title>
 
-    <refsect2 id="function-gtk- -alternative-dialog-button-order">
+    <refsect2 id="function-gtk--alternative-dialog-button-order">
       <title>gtk.alternative_dialog_button_order</title>
 
       <programlisting><methodsynopsis language="python">
@@ -809,8 +870,8 @@ returns the response id of the widget specified by
 	<varlistentry>
 	  <term><parameter role="keyword">screen</parameter>&nbsp;:</term>
 	  <listitem><simpara>the <link
-linkend="class-gdkscreen"><classname>gtk.gdk.Screen</classname> or
-<literal>None</literal> to use the default screen</link></simpara></listitem>
+linkend="class-gdkscreen"><classname>gtk.gdk.Screen</classname></link> or
+<literal>None</literal> to use the default screen</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	<term><emphasis>Returns</emphasis>&nbsp;:</term>
