@@ -1,3 +1,8 @@
+2009-02-25  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
+	* pygtk-gtkfilechooser.xml:
+	* pygtk-gtkdialog.xml: Update docs to 2.14
+
 2009-02-23  Gian Mario Tagliaretti  <gianmt@gnome.org>
 	
 	Bug 567736 – Misleading suggestion of get_child_requisition in
